Kubernetes/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   namespace: default
#   name: ingress
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
# spec:
#   ingressClassName: alb
#   rules:
#     - http:
#         paths:
#         - path: /
#           pathType: Prefix
#           backend:
#             service:
#               name: netflix-app
#               port:
#                 number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:203918878350:certificate/5da2da5d-b5fb-4865-a5b4-806184da1faa
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    kubernetes.io/ingress.class: alb
spec:
  # ingressClassName: alb
  rules:
    - host: netflix.cloudstackmm.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netflix-app
                port:
                  number: 80
    # - host: grafana.cloudstackmm.site
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: kube-prometheus-stack-grafana   # Grafana service name
    #             port:
    #               number: 80
